# bam-utils

./: License.rtf  Makefile.am  configure.ac
tests/: Cu_FriJun261457592015.asc  Cu_FriJun261539532015.asc  Cu_FriJun261708432015.asc  Cu_FriJun261750282015.asc  Cu_FriJun261832272015.asc  Cu_FriJun261914422015.asc  Cu_FriJun261956472015.asc  Cu_FriJun262038562015.asc  Cu_FriJun262121102015.asc  Cu_FriJun262203052015.asc  Cu_FriJun262245022015.asc  Cu_FriJun262327492015.asc  Cu_SatJun270009422015.asc  Feb13_07192.chi  Feb14_09363.chi  Jan14_00611.chi  Jul13_05665.chi  Jul13_05753.chi  Jun14_01036.chi  Jun14_01276.chi  Mai13__00084.chi  Mai14_08673.chi  Mar14_04324.chi  Mar14_04851.chi  Oct13_00305.chi  Sep14_00013.chi  aug14_06813.chi  fe_folieThuJun251508362015.asc  how_the_file_should_look_like.pdh
windows/: Makefile.am  bam-utils.iss
